Fix overlap slot display

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -25,12 +25,15 @@
 	margin-bottom: 5px;
 }
 
+.slot-overlap {
+	margin-right: 50px;
+}
+
 .card {
 	display: inline-block;
 }
 
 .card-overlap {
-	display: inline-block;
 	margin-right: -50px;
 }
 
